--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,42 @@ footer nav ul {
 	margin: 2em
 }
 
+button{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: #1D6154;
+	background-color: white;
+	width: auto;
+	text-align: center;
+	border-radius: 60px ;
+	height: 37px;
+	border: 1px #1D6154 solid;
+	font-size: 16px;
+}
+
+.menu-filtres{
+	display: flex;
+	align-items: center;
+	height: 38px;
+	width:585px;
+	gap:10px;
+	justify-content: center;
+	margin : 2em auto ;
+	
+}
+
+.btn-Tous{
+	width:100px;
+}
+
+.btn-Objets{
+	width:100px;
+}
+
+.btn-Appart{
+	width:157px;
+}
+
+.btn-Hotel-Restau{
+	width:198px;
+}
