--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -257,9 +257,47 @@ button{
 	
 }
 
+/***** Page Login*****/
+
 #loginPage{
 	max-height: 1024px;
 }
 #loginPage a{
 	text-decoration: underline;
 }
+
+/** Mode connexion***/
+.hide{
+	display : none
+}
+
+
+.topBar{
+	background-color: black;
+	/*height: 59px;*/
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 16px;
+	padding:1em;
+
+}
+.logoConnexion{
+	color: #fff8f8;
+}
+.fa-regular fa-pen-to-square{
+	color: white;
+}
+
+.titre-projets {
+  display: flex;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+}
+.connexion-modale {
+  text-align: center;
+  margin-bottom: 2em;
+  padding-left: 1em;
+}
+
