--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -301,3 +301,78 @@ button{
   padding-left: 1em;
 }
 
+/*******MODALE******/
+
+.modal{
+	position:fixed;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.3);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.fenetre-modal{
+	background-color: #FFFFFF;
+	width: 630px;
+	height: 688px;	
+	position: absolute;
+}
+
+.titleModal{
+	font-size:  26px;
+	font-weight: 400;
+	font-family: 'Work Sans';
+	color: #000;
+	margin-top: 1em;
+	text-align: center;
+}
+
+.js-closeModal{
+	margin-top: 1em;
+	position: absolute;
+	right: 1em;
+}
+.js-closeModal fa-xmark{
+	width: 24px;
+	height: 24px;
+}
+
+.galerie-modal{
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	gap: 10px;
+
+}
+
+/**.gallery {
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+}*/
+
+.btnModal{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 2em auto ;
+	width: 237px;
+	text-align: center;
+	border-radius: 60px ;
+	font-size: 14px;
+	display: block; /**pour que margin fonctionne*/
+
+}
+.ligneGrise{
+	border: none;
+	border-top: 1px solid #b3b3b3;
+	margin: 1em auto;
+	width: 420px;
+}
