--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -320,6 +320,7 @@ button{
 	width: 630px;
 	height: 688px;	
 	position: absolute;
+	line-height: 1;
 }
 
 .titleModal{
@@ -327,7 +328,7 @@ button{
 	font-weight: 400;
 	font-family: 'Work Sans';
 	color: #000;
-	margin-top: 1em;
+	margin-top: 2em;
 	text-align: center;
 }
 
@@ -343,10 +344,16 @@ button{
 
 .galerie-modal{
 	width: 100%;
+	max-width: 420px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	gap: 10px;
+	grid-row-gap: 20px;
+	grid-column-gap: 20px;
+	margin: 5em auto;
+}
 
+.galerie-modal img{
+	width: 100%;
 }
 
 /**.gallery {
@@ -373,6 +380,6 @@ button{
 .ligneGrise{
 	border: none;
 	border-top: 1px solid #b3b3b3;
-	margin: 1em auto;
+	margin: 3em auto;
 	width: 420px;
 }
