--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -401,3 +401,83 @@ button{
 	margin: 3em auto;
 	width: 420px;
 }
+
+#section-galerie{
+	display: block;
+}
+
+#section-ajout{
+	display: none;
+}
+
+#charger-photo {
+  background-color: #E8F1F6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 420px;
+}
+
+.charger-photo{
+	position: relative;
+}
+#charger-fichier{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: auto;
+	height: 2em;
+	opacity: 0;
+	cursor: pointer;
+	z-index: 1;
+}
+
+#form-ajout {
+  margin: 2em auto;
+  width: 420px;
+}
+
+.form-group {
+  margin: 2em auto;
+}
+.charger-photo i {
+  font-size: 68px;
+  color: #B9C5CC;
+}
+#btn-charger {
+  width: 173px;
+  background-color: #CBD6DC;
+  color: #306685;
+  font-size: 14px;
+  font-weight: 500;
+  /*! font-style: ; */
+  border: none;
+  margin: 1em auto;
+  position: relative;
+  z-index: 2;
+}
+
+#titre-photo {
+  width: 420px;
+  height: 51px;
+  box-shadow: 0px 4px 14px 0px rgba(0,0,0,0.09);
+  border: none;
+}
+#categorie-photo {
+  width: 420px;
+  height: 51px;
+  background: white;
+  box-shadow: 0px 4px 14px 0px rgba(0,0,0,0.09);
+  border: none;
+}
+
+.btn-retour{
+	margin-top: 1em;
+	position: absolute;
+	left: 1em;
+}
+.btn-retour fa-arrow-left{
+	width: 24px;
+	height: 24px;
+}
