--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -347,17 +347,23 @@ button{
 	max-width: 420px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-row-gap: 20px;
-	grid-column-gap: 20px;
+	/*grid-row-gap: 20px;
+	grid-column-gap: 20px;*/
+	gap: 1rem;
+	max-height: calc((90px + 1rem)*3);
+	overflow-y: auto;
 	margin: 5em auto;
 }
 
 .galerie-modal img{
 	width: 100%;
+	height: 100%;
 }
 
 .modal-projet{
 	position: relative;
+	height: 90px;
+	overflow: hidden;
 }
 
 .btn-trash{
@@ -391,6 +397,7 @@ button{
 	width: 237px;
 	text-align: center;
 	border-radius: 60px ;
+	border: none;
 	font-size: 14px;
 	display: block; /**pour que margin fonctionne*/
 
@@ -417,20 +424,40 @@ button{
   align-items: center;
   justify-content: center;
   width: 420px;
+  height:169px;
+}
+
+.chargement{
+	background-color: #E8F1F6;
+	height: 169px;
+}
+
+#previsu_container {
+  height: 169px;
+}
+#previsu-img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
 .charger-photo{
 	position: relative;
 }
+
 #charger-fichier{
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: auto;
-	height: 2em;
+	width: 173px;
+	height: 3em;
 	opacity: 0;
 	cursor: pointer;
 	z-index: 1;
+}
+
+.charger-photo p {
+  font-size: 10px;
 }
 
 #form-ajout {
@@ -440,11 +467,15 @@ button{
 
 .form-group {
   margin: 2em auto;
+  display: flex;
+  flex-direction: column;
 }
+
 .charger-photo i {
   font-size: 68px;
   color: #B9C5CC;
 }
+
 #btn-charger {
   width: 173px;
   background-color: #CBD6DC;
@@ -458,18 +489,28 @@ button{
   z-index: 2;
 }
 
+.modal label {
+  font-size: 14px;
+  font-weight: 500;
+  color: #3D3D3D;
+  text-align: left;
+}
+
 #titre-photo {
   width: 420px;
   height: 51px;
   box-shadow: 0px 4px 14px 0px rgba(0,0,0,0.09);
   border: none;
+  margin-top:1em;
 }
+
 #categorie-photo {
   width: 420px;
   height: 51px;
   background: white;
   box-shadow: 0px 4px 14px 0px rgba(0,0,0,0.09);
   border: none;
+  margin-top:1em;
 }
 
 .btn-retour{
