--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -272,6 +272,11 @@ button{
 	text-decoration: underline;
 }
 
+#login-message{
+	color:red;
+	font-weight: bold;
+}
+
 /** Mode connexion***/
 .hide{
 	display : none
@@ -408,6 +413,9 @@ button{
 	display: block; /**pour que margin fonctionne*/
 
 }
+
+
+
 .ligneGrise{
 	border: none;
 	border-top: 1px solid #b3b3b3;
@@ -495,9 +503,32 @@ button{
   z-index: 2;
 }
 
+.btn-valider{
+	font-family: 'Syne';
+	font-weight: 700;
+	color:white;
+	background-color: #a7a7a7;
+	margin : 2em auto ;
+	width: 237px;
+	text-align: center;
+	border-radius: 60px ;
+	border: none;
+	font-size: 14px;
+	display: block; /**pour que margin fonctionne*/
+}
+
 .green{
 	background-color: #1D6154;
-	color: white;
+	font-family: 'Syne';
+	font-weight: 700;
+	color:white;
+	margin : 2em auto ;
+	width: 237px;
+	text-align: center;
+	border-radius: 60px ;
+	border: none;
+	font-size: 14px;
+	display: block; /**pour que margin fonctionne*/
 }
 
 
